--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -99,6 +99,11 @@ Resources:
 
   SCPCustomResource:
     Type: AWS::Serverless::Function
+    Metadata:
+      fn-lint:
+        config:
+          ignore_checks:
+          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Runtime: python3.7
@@ -116,7 +121,7 @@ Resources:
                 - organizations:ListRoots
                 - organizations:ListPolicies
                 - organizations:ListPoliciesForTarget
-              Resource: "*" # allow wildcard
+              Resource: "*"
       InlineCode: |
         import boto3
         import cfnresponse
@@ -234,6 +239,11 @@ Resources:
 
   SCPEnableCustomResource:
     Type: AWS::Serverless::Function
+    Metadata:
+      fn-lint:
+        config:
+          ignore_checks:
+          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Handler: index.enable_service_control_policies
