--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -99,11 +99,6 @@ Resources:
 
   SCPCustomResource:
     Type: AWS::Serverless::Function
-    Metadata:
-      fn-lint:
-        config:
-          ignore_checks:
-          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Runtime: python3.7
@@ -121,7 +116,7 @@ Resources:
                 - organizations:ListRoots
                 - organizations:ListPolicies
                 - organizations:ListPoliciesForTarget
-              Resource: "*"
+              Resource: !Sub "arn:${AWS::Partition}:organizations::${AWS::AccountId}:organization/*"
       InlineCode: |
         import boto3
         import cfnresponse
@@ -239,11 +234,6 @@ Resources:
 
   SCPEnableCustomResource:
     Type: AWS::Serverless::Function
-    Metadata:
-      fn-lint:
-        config:
-          ignore_checks:
-          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Handler: index.enable_service_control_policies
@@ -256,7 +246,7 @@ Resources:
                 - organizations:EnablePolicyType
                 - organizations:DisablePolicyType
                 - organizations:ListRoots
-              Resource: "*"
+              Resource: !Sub "arn:${AWS::Partition}:organizations::${AWS::AccountId}:organization/*"
       InlineCode: |
         import boto3
         import cfnresponse
