--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -116,11 +116,6 @@ Resources:
 
   HostedZoneDKIMAndVerificationRecordsCustomResource:
     Type: AWS::Serverless::Function
-    Metadata:
-      cfn-lint:
-        config:
-          ignore_checks:
-          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Handler: index.handler
@@ -132,7 +127,7 @@ Resources:
               Action:
                 - ses:VerifyDomainDkim
                 - ses:VerifyDomainIdentity
-              Resource: "*"
+              Resource: !Sub arn:${AWS::Partition}:*
       InlineCode: |
         import boto3
         import cfnresponse
