chore: manually ignore resource linter because metadata doesn't work

--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -247,11 +247,6 @@ Resources:
 
   RootMailReady:
     Type: AWS::Serverless::Function
-    Metadata:
-      cfn-lint:
-        config:
-          ignore_checks:
-          - EIAMPolicyWildcardResource
     Properties:
       Events:
         Schedule:
@@ -350,7 +345,7 @@ Resources:
                 - ses:GetAccountSendingEnabled
                 - ses:GetIdentityDkimAttributes
                 - ses:GetIdentityNotificationAttributes
-              Resource: '*'
+              Resource: !Sub arn:${AWS::Partition}:*
       Timeout: 260 # the timeout effectivly limits retries to 2^(n+1) - 1 = 9 attempts with backup
 
   RootMailReadyAlert:
