--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -127,7 +127,7 @@ Resources:
               Action:
                 - ses:VerifyDomainDkim
                 - ses:VerifyDomainIdentity
-              Resource: !Sub arn:${AWS::Partition}:*
+              Resource: '*'
       InlineCode: |
         import boto3
         import cfnresponse
@@ -345,7 +345,7 @@ Resources:
                 - ses:GetAccountSendingEnabled
                 - ses:GetIdentityDkimAttributes
                 - ses:GetIdentityNotificationAttributes
-              Resource: !Sub arn:${AWS::Partition}:*
+              Resource: '*'
       Timeout: 260 # the timeout effectivly limits retries to 2^(n+1) - 1 = 9 attempts with backup
 
   RootMailReadyAlert:
