--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -116,7 +116,7 @@ Resources:
                 - organizations:ListRoots
                 - organizations:ListPolicies
                 - organizations:ListPoliciesForTarget
-              Resource: !Sub arn:${AWS::Partition}:organizations::*:organization/*
+              Resource: "*"
       InlineCode: |
         import boto3
         import cfnresponse
@@ -246,7 +246,7 @@ Resources:
                 - organizations:EnablePolicyType
                 - organizations:DisablePolicyType
                 - organizations:ListRoots
-              Resource: !Sub arn:${AWS::Partition}:organizations::*:organization/*
+              Resource: "*"
       InlineCode: |
         import boto3
         import cfnresponse
