move failing ignore checks to template metadata

--- a/templates/control-tower.yaml
+++ b/templates/control-tower.yaml
@@ -214,3 +214,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
