--- a/templates/notifications.yaml
+++ b/templates/notifications.yaml
@@ -1,6 +1,11 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
 Description: Sets up notifications. (qs-1s3rsr7mk)
+Metadata:
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
 
 Parameters:
   NotificationsMail:
