--- a/templates/budget.yaml
+++ b/templates/budget.yaml
@@ -166,3 +166,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
