--- a/templates/guardduty.yaml
+++ b/templates/guardduty.yaml
@@ -302,3 +302,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
