--- a/templates/living-documentation.yaml
+++ b/templates/living-documentation.yaml
@@ -129,3 +129,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
