--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -777,3 +777,8 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
+        - EIAMPolicyWildcardResource
