--- a/templates/security-hub.yaml
+++ b/templates/security-hub.yaml
@@ -429,3 +429,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
