--- a/templates/service-control-policies.yaml
+++ b/templates/service-control-policies.yaml
@@ -314,3 +314,8 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
+        - EIAMPolicyWildcardResource
