--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,6 +20,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-servicecatalog-alpha": "^2.0.0-alpha.6",
     "@aws-sdk/credential-provider-sso": "^3.38.0",
     "aws-cdk-lib": "2.0.0-rc.25",
     "aws-sdk": "^2.1015.0",
