--- a/cdk/buildspec.yaml
+++ b/cdk/buildspec.yaml
@@ -3,6 +3,9 @@ env:
   shell: bash
 
 phases:
+  install:
+    runtime-versions:
+      java: nodejs: 14
   build:
     commands:
       - cd cdk && yarn install && npx cdk deploy --require-approval never
