--- a/cdk/package.json
+++ b/cdk/package.json
@@ -11,18 +11,18 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "2.0.0-rc.29",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@types/jest": "^27.0.3",
+    "@types/node": "17.0.3",
+    "aws-cdk": "2.3.0",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
+    "typescript": "~4.5.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-servicecatalog-alpha": "^2.0.0-alpha.6",
+    "@aws-cdk/aws-servicecatalog-alpha": "2.3.0-alpha.0",
     "@aws-sdk/credential-provider-sso": "^3.38.0",
-    "aws-cdk-lib": "2.0.0-rc.29",
+    "aws-cdk-lib": "2.3.0",
     "aws-sdk": "^2.1015.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
