--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,6 +20,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-event-sources": "^1.137.0",
     "@aws-cdk/aws-servicecatalog-alpha": "2.3.0-alpha.0",
     "@aws-sdk/credential-provider-sso": "^3.38.0",
     "aws-cdk-lib": "2.3.0",
