--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -1,4 +1,13 @@
 AWSTemplateFormatVersion: 2010-09-09
+Metadata:
+  SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
+        - EPolicyWildcardPrincipal
+        - E1029
+
 Transform: AWS::Serverless-2016-10-31
 Description: Sets up backups. (qs-1s3rsr7la)
 
@@ -21,7 +30,7 @@ Resources:
               Action:
                 - organizations:ListRoots
                 - organizations:DescribeOrganization
-              Resource: '*'
+              Resource: "*"
       InlineCode: |
         import boto3
         import cfnresponse
@@ -566,6 +575,11 @@ Resources:
 
   TagPolicyCustomResource:
     Type: AWS::Serverless::Function
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+          - EIAMPolicyWildcardResource
     Properties:
       Timeout: 200
       Runtime: python3.7
@@ -1024,6 +1038,3 @@ Resources:
             return [p['Id'] for p in
                     o.list_policies_for_target(TargetId=root_id(), Filter='BACKUP_POLICY')['Policies'] if
                     p['Id'] == policy_id]
-
-Metadata:
-  SuperwerkerVersion: 0.0.0-DEVELOPMENT
