--- a/templates/security-hub.yaml
+++ b/templates/security-hub.yaml
@@ -225,6 +225,11 @@ Resources:
 
   EnableSecurityHubInOrgAccountAndAddAsMemberRole:
     Type: AWS::IAM::Role
+    Metadata:
+      cfn-lint:
+        config:
+          ignore_checks:
+          - EIAMPolicyWildcardResource
     Properties:
       AssumeRolePolicyDocument:
         Version: 2012-10-17
@@ -424,3 +429,7 @@ Resources:
 
 Metadata:
   SuperwerkerVersion: 0.0.0-DEVELOPMENT
+  cfn-lint:
+    config:
+      ignore_checks:
+        - E9007
