--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -646,7 +646,7 @@ Resources:
 
                         for k, v in verdicts.items():
 
-                          if not v == 'PASS':
+                          if v == 'FAIL':
 
                             log({
                               'class': k,
