--- a/templates/backup.yaml
+++ b/templates/backup.yaml
@@ -79,6 +79,7 @@ Resources:
   OrganizationConformancePackBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       BucketName: !Sub awsconfigconforms-${AWS::AccountId}
 
