--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -7,10 +7,8 @@ batch:
       env:
         variables:
           SUPERWERKER_REGION:
-            - eu-west-1
-            - eu-central-1
+            - us-east-2
           UPDATE_FROM_LATEST_RELEASE:
-            - true
             - false
 
 phases:
