--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -9,6 +9,7 @@ batch:
           SUPERWERKER_REGION:
             - us-east-2
           UPDATE_FROM_LATEST_RELEASE:
+            - true
             - false
 
 phases:
