--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -7,6 +7,7 @@ batch:
       env:
         variables:
           SUPERWERKER_REGION:
+            - eu-west-1
             - us-east-2
           UPDATE_FROM_LATEST_RELEASE:
             - true
