tests: make clean more robust
by using a state machine as 'angel' to retry cleanup codebuild

it's the same mechansim the MAVM uses, and it allows to fix
underlying problems like awsapilib needing to be adapted to
aws console changes

--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -212,6 +212,8 @@ Resources:
             Type: SECRETS_MANAGER
           - Name: SUPERWERKER_CLEANUP_PROJECT_NAME
             Value: !ImportValue superwerker-tests-CleanupProjectName
+          - Name: SUPERWERKER_CLEANUP_STATE_MACHINE
+            Value: !ImportValue superwerker-tests-CleanupStateMachine
 
       ServiceRole: !GetAtt BuildAndTestProjectRole.Arn
       Artifacts:
