--- a/tests/buildspec.yaml
+++ b/tests/buildspec.yaml
@@ -86,4 +86,5 @@ phases:
       - aws --profile test_account iam delete-user --user-name superwerker-tests || true
 
       # call sub-account closing and stack cleanup
-      - aws codebuild start-build --project-name ${SUPERWERKER_CLEANUP_PROJECT_NAME} --environment-variables-override name=AWS_CROSS_ACCOUNT_ROLE_ARN,value=${aws_cross_account_role_arn} name=SUPERWERKER_REGION,value=${SUPERWERKER_REGION} name=AWS_ACCOUNT_ID,value=${aws_account_id}
+      - |
+        aws --profile superwerker-test1-master stepfunctions start-execution  --state-machine-arn ${SUPERWERKER_CLEANUP_STATE_MACHINE} --input '{"AWS_CROSS_ACCOUNT_ROLE_ARN": "'"${AWS_CROSS_ACCOUNT_ROLE_ARN}"'", "AWS_ACCOUNT_ID": "'"${AWS_ACCOUNT_ID}"'", "SUPERWERKER_REGION": "'"${SUPERWERKER_REGION}"'"}'
