fix(guardduty): makes EnableGuardDutyInManagementAccount step work with iam:GetRole
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/templates/guardduty.yaml
+++ b/templates/guardduty.yaml
@@ -189,6 +189,7 @@ Resources:
                   - organizations:RegisterDelegatedAdministrator
                   - organizations:DescribeOrganization
                   - ssm:DescribeAutomationExecutions
+                  - iam:GetRole
                 Resource: '*'
         - PolicyName: AllowStartAutomationExecution
           PolicyDocument:
