fix(guardduty): makes EnableGuardDutyInManagementAccount step work with allowing all service linked roles to be created
Signed-off-by: Manuel Vogel <mavogel@posteo.de>

--- a/templates/guardduty.yaml
+++ b/templates/guardduty.yaml
@@ -216,7 +216,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action: iam:CreateServiceLinkedRole
-                Resource: !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/guardduty.amazonaws.com/AWSServiceRoleForAmazonGuardDuty
+                Resource: !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/aws-service-role/*
 
   EnableGuardDutyExistingAccounts:
     Type: AWS::SSM::Document
